--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-    "name": "pdf_parser",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start":"node index.js"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "@mistralai/mistralai": "^1.6.0",
-      "dotenv": "^16.5.0",
-      "ejs": "^3.1.10",
-      "express": "^5.1.0",
-      "fs": "^0.0.1-security",
-      "multer": "^1.4.5-lts.2",
-      "openai": "^4.96.0",
-      "path": "^0.12.7",
-      "zod": "^3.24.3"
-    }
+  "name": "pdf_parser",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@anthropic-ai/sdk": "0.40.0",
+    "@mistralai/mistralai": "^1.6.0",
+    "dotenv": "^16.5.0",
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.2",
+    "openai": "^4.96.0",
+    "path": "^0.12.7",
+    "zod": "^3.24.3"
   }
+}
