--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.5-lts.2",
     "openai": "^4.96.0",
     "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
     "zod": "^3.24.3"
   }
 }
